kubernetes/apps/default/prowlarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
      app.kubernetes.io/instance: prowlarr
      app.kubernetes.io/controller: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/instance: prowlarr
        app.kubernetes.io/controller: prowlarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/home-operations/prowlarr:2.3.5.5318@sha256:a44d003ee6f6ce23882d009482ca2ac7f951df64e73bfa04711363268d278562
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              path: /ping
              port: 80
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /ping
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: 1000m
              memory: 500Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr
