kubernetes/apps/default/prowlarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/controller: prowlarr
